Enforce enums
